add Button component

--- a/src/styles/_themeColor.scss
+++ b/src/styles/_themeColor.scss
@@ -1,1 +1,28 @@
-$primaty-color: #CF1F2E;
+$primaty-color: #CF1F2E; // This color is our primary brand color.
+$secondary-color: #1B1B1B; //This color is used for our default text and secondary buttons.
+
+$secondary-color-pink: #ED7064;
+$secondary-color-yellow: #EBAB33;
+$secondary-color-green: #009783;
+$secondary-color-blue: #0475bc;
+
+$tertiary-pink: #F8D2CB;
+$tertiary-yellow: #FFF2DF;
+$tertiary-green: #C5E4C8;
+$tertiary-blue: #D1E8F8;
+
+$grayscale-theme-0: #FFFFFF;
+$grayscale-theme-25: #FBFBFB;
+$grayscale-theme-50: #F6F6F6;
+$grayscale-theme-100: #F2F2F2;
+$grayscale-theme-200: #EAEAEA;
+$grayscale-theme-250: #E1E1E1;
+$grayscale-theme-300: #CDCDCD;
+$grayscale-theme-400: #AEAEAE;
+$grayscale-theme-500: #909090;
+$grayscale-theme-600: #757575;
+$grayscale-theme-700: #5F5F5F;
+$grayscale-theme-800: #454545;
+$grayscale-theme-900: #303030;
+$grayscale-theme-1000: #1B1B1B;
+$grayscale-theme-1100: #000000;
