--- a/src/components/Button/_style.scss
+++ b/src/components/Button/_style.scss
@@ -1,55 +1,1 @@
-$theme-color: #CF1F2E; // This color is our primary brand color.
-$theme-font: Nunito Sans;
-$theme-linear-gradient: linear-gradient(90.44deg, #E9425B 0%, #CF1F2E 100%);
-$theme-bg-color: #1B1B1B;
-$theme-border-radius: 28px;
-
-.m-btn {
-  padding: 0;
-  border: none;
-  outline: none;
-  background-color: #fff;
-  cursor: pointer;
-  min-width: 92px;
-  padding: 14px 24px;
-  border-radius: $theme-border-radius;
-  position: relative;
-  font-family: $theme-font;
-  font-weight: bold;
-
-  &-primary {
-    background: $theme-color;
-    background-color: $theme-color;
-    color: #fff;
-
-    &:hover {
-      &::before {
-        content: "";
-        width: 100%;
-        height: 100%;
-        background-color: $theme-bg-color;
-        opacity: 0.15;
-        position: absolute;
-        top: 0;
-        left: 0;
-        border-radius: $theme-border-radius;
-      }
-    }
-  }
-
-  &-default {
-    border: 2px solid $theme-color;
-    color: $theme-color;
-    box-sizing: border-box;
-  }
-
-  &-large {
-    min-width: 100px;
-    padding: 16px 24px;
-  }
-
-  &-small {
-    min-width: 78px;
-    padding: 12px 17px;
-  }
-}
+$themeColor: '#1B1B1B';
