--- a/src/components/Modal/_styles.scss
+++ b/src/components/Modal/_styles.scss
@@ -15,12 +15,11 @@ body {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, .25);
-
   font-family: Nunito Sans;
   font-style: normal;
-  font-weight: bold;
   font-size: 16px;
   line-height: 24px;
+  letter-spacing: .05rem;
 
   .s-modal-content {
     position: absolute;
@@ -39,6 +38,7 @@ body {
       justify-content: space-between;
       align-items: center;
       position: relative;
+      font-weight: bold;
 
       &::after {
         content: "";
