--- a/src/components/Modal/_styles.scss
+++ b/src/components/Modal/_styles.scss
@@ -65,7 +65,7 @@ body {
       height: $footerHeight;
       line-height: $footerHeight;
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       position: relative;
 
       &::before {
@@ -80,29 +80,14 @@ body {
       }
 
       .modal-footer-btns {
-        flex: 1;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
         align-items: center;
-      }
 
-      .modal-footer-links,
-      .modal-footer-btns {
-        .modal-footer-btn {
-          cursor: pointer;
+        .s-btn {
+          margin-left: 8px;
         }
-      }
-
-      .s-btn-link {
-        &:hover {
-          text-decoration: underline;
-          margin-right: 12px;
-        }
-      }
-
-      .s-btn-confirm {
-        margin-left: 12px;
       }
     }
   }
